@@ -1,6 +1,7 @@
 == Changelog ==
 
 = 1.4.0 =
+* Enhanced: a new value 'none' is now supported for the `layout` form property which will prevent any wrapper from rendering; it is recommended to only use this for advanced field layouts
 * Enhanced: `input_before` and `input_after` now support HTML by putting something like `{input_before}<span>Content before</span>{/input_before} into the content of a field shortcode (make sure to use curly braces); this method is now recommended and takes precedence over the old way
 
 = 1.3.1 =
